# sys-voice-daemon

./: Cargo.toml  README.md  build.rs  justfile
debian/: changelog  control  copyright  postinst  postrm  rules
gnome-extension/vosk-dictation@vosk-dictation/: extension.js  metadata.json  stylesheet.css
src/: audio.rs  config.rs  daemon.rs  dbus.rs  focus.rs  hud.rs  injector.rs  main.rs  stt.rs
