[package]
name = "assistant"
version = "1.0.0"
edition = "2024"

[features]
default = []
hud = ["gtk4"]

[dependencies]
rodio = "0.22.2"
vosk = "0.3.1"
evdev = "0.12"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
gtk4 = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
